--- a/pran.html
+++ b/pran.html
@@ -260,7 +260,7 @@
         </div>
 
       </div>
-    </section>
+    </section> &nbsp;&nbsp;&nbsp;
 
     <!-- FOOTER -->
     <footer style="margin-top:80px;">
