--- a/pran.html
+++ b/pran.html
@@ -124,22 +124,48 @@
       display: block;
     }
 
-    @media (max-width: 768px) {
-      .pdf-box {
-        height: auto;
-        min-height: 400px;
-        aspect-ratio: 3 / 4;
+    /* ===== PDF buttons ===== */
+    .pdf-box-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 15px;
+      flex-wrap: wrap;
+    }
+    .pdf-box-buttons a.btn-view {
+      background: linear-gradient(45deg, #ff6b6b, #e41f26);
+      color: #fff;
+      border: none;
+      transition: all 0.3s ease;
+    }
+    .pdf-box-buttons a.btn-view:hover {
+      background: linear-gradient(45deg, #e41f26, #ff6b6b);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    }
+    .pdf-box-buttons a.btn-download {
+      background: #e41f26;
+      color: #fff;
+      border: none;
+    }
+    .pdf-box-buttons a.btn-download:hover {
+      background: #c51919;
+      transform: translateY(-1px);
+      box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+    }
+
+    @media (max-width: 768px){
+      .pdf-box-buttons {
+        flex-direction: column;
       }
-      .tab-btn {
-        font-size: 14px;
-        padding: 8px 12px;
+      .pdf-box-buttons a {
+        width: 90%;
       }
     }
 
     .pdf-box iframe {
       min-height: 75vh;
     }
-
     @media (max-width:768px){
       .pdf-box iframe {
         min-height: 500px;
@@ -220,26 +246,19 @@
       <div class="d-flex flex-wrap justify-content-center align-items-center gap-2 mb-4">
         <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
         <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
-        <a id="open-new-tab" class="tab-btn" target="_blank">Buka di Tab Baru</a>
-        <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success">
-          <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
-        </a>
       </div>
     </section>
 
     <!-- PDF SECTIONS -->
     <section class="py-5 border-top">
       <div class="switch-panel pb-5">
-
         <!-- KATALOG -->
         <div id="panel-catalog" class="panel-inner show">
           <h4 class="text-center mb-3 text-danger">Katalog Produk PRAN</h4>
-
-          <div class="text-center mb-3">
-            <a href="catalog.pdf" class="btn btn-danger me-2" download>📥 Muat Turun Katalog</a>
-            <a id="catalog-google" class="btn btn-outline-danger" target="_blank">📄 Lihat Katalog dengan Google Doc Viewer</a>
+          <div class="text-center mb-3 pdf-box-buttons">
+            <a href="catalog.pdf" class="btn btn-download me-2" download>📥 Muat Turun Katalog</a>
+            <a id="catalog-google" class="btn btn-view" target="_blank">📄 Lihat Katalog dengan Google Doc Viewer</a>
           </div>
-
           <div class="pdf-box">
             <iframe src="catalog.pdf" title="Katalog PRAN"></iframe>
           </div>
@@ -248,27 +267,24 @@
         <!-- BORANG -->
         <div id="panel-form" class="panel-inner">
           <h4 class="text-center mb-3 text-danger">Borang Buka Akaun Kopusamaju</h4>
-
-          <div class="text-center mb-3">
-            <a href="borang-akaun.pdf" class="btn btn-danger me-2" download>📥 Muat Turun Borang</a>
-            <a id="form-google" class="btn btn-outline-danger" target="_blank">📝 Lihat Borang Akaun dengan Google Doc Viewer</a>
+          <div class="text-center mb-3 pdf-box-buttons">
+            <a href="borang-akaun.pdf" class="btn btn-download me-2" download>📥 Muat Turun Borang</a>
+            <a id="form-google" class="btn btn-view" target="_blank">📝 Lihat Borang Akaun dengan Google Doc Viewer</a>
           </div>
-
           <div class="pdf-box">
             <iframe src="borang-akaun.pdf" title="Borang Akaun"></iframe>
           </div>
         </div>
-
       </div>
-    </section> &nbsp;&nbsp;&nbsp;
+    </section>
+
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
     <!-- FOOTER -->
-    <footer style="margin-top:80px;">
+    <footer>
       <strong>Kopusamaju Sabah Berhad</strong> | Ejen Rasmi PRAN<br>
       © <span id="year"></span> Kopusamaju Sabah Berhad.
     </footer>
-
-  </main>
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -281,7 +297,6 @@
       catalog: document.getElementById("panel-catalog"),
       form: document.getElementById("panel-form"),
     };
-    const openNewTabBtn = document.getElementById("open-new-tab");
 
     const catalogUrl = "catalog.pdf";
     const formUrl = "borang-akaun.pdf";
@@ -294,11 +309,9 @@
     function switchTo(target) {
       tabs.forEach(btn => btn.classList.toggle("active", btn.dataset.target === target));
       Object.keys(panels).forEach(key => panels[key].classList.toggle("show", key === target));
-      openNewTabBtn.href = target === "catalog" ? catalogUrl : formUrl;
     }
 
     tabs.forEach(btn => btn.addEventListener("click", () => switchTo(btn.dataset.target)));
-    openNewTabBtn.href = catalogUrl;
 
     // Lightbox init
     const lightbox = GLightbox({ selector: '.glightbox' });
