--- a/pran.html
+++ b/pran.html
@@ -81,7 +81,7 @@
       cursor: pointer;
       font-weight: 600;
       transition: all .3s ease;
-      margin: 0 5px;
+      margin: 0 5px 10px 5px;
     }
     .tab-btn.active {
       background: linear-gradient(180deg, var(--pran-red), #c51919);
@@ -91,24 +91,24 @@
 
     .switch-panel {
       position: relative;
-      min-height: 450px;
-      padding-bottom: 100px; /* ruang bawah untuk footer */
+      width: 100%;
     }
     .panel-inner {
       opacity: 0;
       transform: translateY(20px);
-      position: absolute;
-      inset: 0;
       transition: all .4s ease;
       pointer-events: none;
+      height: 0;
+      overflow: hidden;
     }
     .panel-inner.show {
       opacity: 1;
       transform: translateY(0);
       pointer-events: all;
+      height: auto;
     }
 
-    /* ===== PDF box / Google Doc Viewer ===== */
+    /* ===== PDF box ===== */
     .pdf-box {
       border-radius: 12px;
       overflow: hidden;
@@ -125,23 +125,22 @@
       display: block;
     }
 
-    @media (max-width:768px){
+    @media (max-width: 768px) {
       .pdf-box {
         height: auto;
-        min-height: 500px; /* cukup ruang untuk mobile */
-      }
-      .switch-panel {
-        padding-bottom: 150px; /* tambah ruang bawah di mobile */
+        min-height: 400px;
+        aspect-ratio: 3 / 4;
       }
     }
 
-    /* ===== Buttons spacing ===== */
-    .btn-actions {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin-bottom: 20px;
+    .pdf-box iframe {
+      min-height: 75vh;
+    }
+
+    @media (max-width:768px){
+      .pdf-box iframe {
+        min-height: 500px;
+      }
     }
 
     /* ===== Gallery ===== */
@@ -170,6 +169,11 @@
       border-top: 1px solid rgba(0,0,0,0.05);
       padding: 30px 0 15px;
       margin-top: 60px;
+    }
+
+    /* ===== Buttons spacing ===== */
+    .pdf-buttons a {
+      margin: 0 5px 5px 5px;
     }
   </style>
 </head>
@@ -218,48 +222,44 @@
       <div class="d-flex flex-wrap justify-content-center align-items-center gap-2 mb-4">
         <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
         <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
-        <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success">
+        <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success ms-2">
           <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
         </a>
       </div>
     </section>
 
-    <!-- PDF SECTIONS / GOOGLE DOC VIEWER -->
+    <!-- PDF SECTIONS -->
     <section class="py-5 border-top">
       <div class="switch-panel pb-5">
 
         <!-- KATALOG -->
         <div id="panel-catalog" class="panel-inner show">
           <h4 class="text-center mb-3 text-danger">Katalog Produk PRAN</h4>
-
-          <div class="btn-actions">
-            <a href="catalog.pdf" download class="btn btn-danger">📥 Muat Turun</a>
-            <a id="catalog-google" target="_blank" class="btn btn-outline-danger">👁️ Lihat dengan Google Doc Viewer</a>
+          <div class="pdf-buttons text-center mb-3">
+            <a href="catalog.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
+            <a id="catalog-google" class="btn btn-outline-danger" target="_blank">👁️ Lihat dengan Google Docs Viewer</a>
           </div>
-
           <div class="pdf-box">
-            <iframe id="iframe-catalog" src="" title="Katalog PRAN"></iframe>
+            <iframe src="" id="catalog-iframe" title="Katalog PRAN"></iframe>
           </div>
         </div>
 
         <!-- BORANG -->
         <div id="panel-form" class="panel-inner">
           <h4 class="text-center mb-3 text-danger">Borang Buka Akaun Kopusamaju</h4>
-
-          <div class="btn-actions">
-            <a href="borang-akaun.pdf" download class="btn btn-danger">📥 Muat Turun</a>
-            <a id="form-google" target="_blank" class="btn btn-outline-danger">👁️ Lihat dengan Google Doc Viewer</a>
+          <div class="pdf-buttons text-center mb-3">
+            <a href="borang-akaun.pdf" class="btn btn-danger" download>📥 Muat Turun</a>
+            <a id="form-google" class="btn btn-outline-danger" target="_blank">👁️ Lihat dengan Google Docs Viewer</a>
           </div>
-
           <div class="pdf-box">
-            <iframe id="iframe-form" src="" title="Borang Akaun"></iframe>
+            <iframe src="" id="form-iframe" title="Borang Akaun"></iframe>
           </div>
         </div>
 
       </div>
     </section>
 
-    &nbsp;&nbsp; <!-- Jarak sebelum footer -->
+    &nbsp;&nbsp; <!-- jarak sebelum footer -->
 
     <!-- FOOTER -->
     <footer>
@@ -281,29 +281,26 @@
       form: document.getElementById("panel-form"),
     };
 
-    const catalogUrl = location.origin + "/catalog.pdf";
-    const formUrl = location.origin + "/borang-akaun.pdf";
+    const catalogIframe = document.getElementById("catalog-iframe");
+    const formIframe = document.getElementById("form-iframe");
 
-    // Google Doc Viewer
+    const catalogUrl = "catalog.pdf";
+    const formUrl = "borang-akaun.pdf";
+
+    // Set iframe src untuk Google Docs Viewer
     document.getElementById("catalog-google").href =
-      "https://docs.google.com/gview?url=" + encodeURIComponent(catalogUrl) + "&embedded=true";
-    document.getElementById("form-google").href =
-      "https://docs.google.com/gview?url=" + encodeURIComponent(formUrl) + "&embedded=true";
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/" + catalogUrl) + "&embedded=true";
+    catalogIframe.src =
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/" + catalogUrl) + "&embedded=true";
 
-    // Set iframe src default
-    document.getElementById("iframe-catalog").src = document.getElementById("catalog-google").href;
-    document.getElementById("iframe-form").src = document.getElementById("form-google").href;
+    document.getElementById("form-google").href =
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/" + formUrl) + "&embedded=true";
+    formIframe.src =
+      "https://docs.google.com/gview?url=" + encodeURIComponent(location.origin + "/" + formUrl) + "&embedded=true";
 
     function switchTo(target) {
       tabs.forEach(btn => btn.classList.toggle("active", btn.dataset.target === target));
       Object.keys(panels).forEach(key => panels[key].classList.toggle("show", key === target));
-
-      // Update iframe src dynamically
-      if(target === "catalog"){
-        document.getElementById("iframe-catalog").src = document.getElementById("catalog-google").href;
-      } else {
-        document.getElementById("iframe-form").src = document.getElementById("form-google").href;
-      }
     }
 
     tabs.forEach(btn => btn.addEventListener("click", () => switchTo(btn.dataset.target)));
