--- a/pran.html
+++ b/pran.html
@@ -258,8 +258,7 @@
 
       </div>
     </section>
-
-    &nbsp;&nbsp; <!-- jarak sebelum footer -->
+ <!-- jarak sebelum footer -->
 
     <!-- FOOTER -->
     <footer>
