--- a/pran.html
+++ b/pran.html
@@ -228,6 +228,7 @@
       <div class="d-flex flex-wrap justify-content-center align-items-center gap-2 mb-4">
         <button class="tab-btn active" data-target="catalog">📘 Katalog</button>
         <button class="tab-btn" data-target="form">📄 Borang Akaun</button>
+        <a id="open-new-tab" class="tab-btn" target="_blank">Buka di Tab Baru</a>
         <a href="https://wa.me/60128169367" target="_blank" class="btn btn-success">
           <i class="bi bi-whatsapp me-2"></i>Hubungi Kami di WhatsApp
         </a>
